# cleanlab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  writeup.md
docs/: conf.py  index.rst  requirements.txt
docs/developer_guide/: architecture.rst  contributing.rst  development.rst  testing.rst
docs/user_guide/: configuration.rst  installation.rst  quickstart.rst
examples/: usage_example.py
grafana/dashboards/: trustworthiness-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
scripts/: install-dependencies.sh  install-hooks.sh  run-tests.sh
src/trustworthiness/: __init__.py  config.py  detector.py  detector_gemini.py  metrics.py  models.py  py.typed  scoring.py
src/trustworthiness/api/: __init__.py  config.py  detector.py  metrics.py  models.py  scoring.py
src/trustworthiness/api/security/: __init__.py  auth.py  headers.py  rate_limiter.py
src/trustworthiness/prompts/: __init__.py  reflection.py
src/trustworthiness/security/: __init__.py  audit.py  headers.py  middleware.py  models.py  rate_limiting.py  request_signing.py  sanitization.py
tests/: __init__.py  conftest.py
tests/functional/: test_batch_processing.py
tests/integration/: test_metrics_endpoint.py  test_security.py  test_trustworthiness.py
tests/load/: test_performance.py
tests/unit/: test_circuit_breaker.py  test_config.py  test_metrics.py  test_prompt_processing.py  test_rate_limiter.py
