[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustworthiness-detector"
version = "0.2.0"
description = "A Python package for detecting trustworthiness in LLM outputs with confidence intervals and explainability"
readme = "README.md"
authors = [
    {name = "Ridwan Abdusalam", email = "ridwanabdsal@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.24.0,<0.26.0",
    "orjson>=3.9.0,<4.0.0",
    "structlog>=23.0.0,<24.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<0.25.0",
    "redis>=4.5.0,<5.0.0",
    "ratelimit>=2.2.1,<3.0.0",
    "prometheus-client>=0.17.0,<0.18.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<0.0.7",
    "litellm>=1.0.0,<2.0.0",
    "google-generativeai>=0.3.0,<0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<0.24.0",
    "pytest-httpbin>=2.0.0,<3.0.0",
    "pytest-xdist[psutil]>=3.3.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-randomly>=3.12.0,<4.0.0",
    "pytest-env>=1.1.0,<2.0.0",
    "freezegun>=1.2.0,<2.0.0",
    "coverage[toml]>=7.3.0,<8.0.0",
    "responses>=0.23.0,<0.24.0",
    "black>=23.9.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    "ruff>=0.0.280,<0.1.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
    "types-pyyaml>=6.0.0,<7.0.0",
    "types-redis>=4.5.0,<5.0.0",
    "types-pytz>=2023.3.0,<2024.0.0",
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.2.0,<2.0.0",
    "sphinx-autodoc-typehints>=1.24.0,<2.0.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
    "myst-parser>=1.0.0,<2.0.0",
    "ipython>=8.14.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "jedi>=0.19.0,<0.20.0",
    "build>=0.10.0,<1.0.0",
    "twine>=4.0.0,<5.0.0",
    "wheel>=0.41.0,<0.42.0",
    "sentry-sdk[fastapi]>=1.30.0,<2.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "watchfiles>=0.20.0,<0.21.0",
    "httpcore>=0.17.0,<0.18.0",
    "httpx-sse>=0.4.0,<0.5.0",
]

[project.urls]
Homepage = "https://github.com/Ridwanabdusalam/cleanlab_takehome"
Documentation = "https://trustworthiness-detector.readthedocs.io/"
Source = "https://github.com/Ridwanabdusalam/cleanlab_takehome"
Issues = "https://github.com/Ridwanabdusalam/cleanlab_takehome/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trustworthiness*"]

[tool.setuptools.package-data]
"trustworthiness" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 88
select = [
    "E", "W", "F", "I",  # Default flake8 selections
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",  # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "A",  # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B905",  # zip-without-explicit-strict
    "B907",  # .format() used on string that has f-strings
    "C90",  # mccabe complexity
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "EM",  # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PD",  # pandas-vet
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RUF",  # ruff-specific rules
    "S",  # flake8-bandit
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "pytest",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
use_parentheses = true
ensure_newline_before_comments = true

